@@ -1,6 +1,6 @@
 Package: mlt
 Title: Most Likely Transformations
-Version: 0.0-30
+Version: 0.0-31
 Date: 2015-02-19
 Authors@R: person("Torsten", "Hothorn", role = c("aut", "cre"),
                   email = "Torsten.Hothorn@R-project.org")  
