@@ -2,9 +2,18 @@
 \name{NEWS}
 \title{NEWS file for the mlt package}
 
+\section{Changes in Version 0.0-31 (2016-02-19)}{
+  \itemize{
+    \item{Replace \code{NA} with zero in output of
+          \code{summary} for \code{survfit} when computing
+          an unconditional distribution estimate.}
+  }
+}
+
 \section{Changes in Version 0.0-30 (2016-02-19)}{
   \itemize{
     \item{The \pkg{mlt} package was first 
           published on CRAN.}
   }
 }
+
